Introduced empty response
